(waybar) edit name from variables.css to colors.css

--- a/.config/waybar/themes/Default/colors.css
+++ b/.config/waybar/themes/Default/colors.css
@@ -57,3 +57,4 @@
 @define-color neutral-700 #2D2C30;
 @define-color neutral-800 #161618;
 @define-color neutral-900 #030304;
+@define-color neutral-900-80 rgba(3, 3, 4, 0.8);
