--- a/.config/waybar/themes/Default/style.css
+++ b/.config/waybar/themes/Default/style.css
@@ -1,4 +1,4 @@
-@import "variables.css";
+@import "colors.css";
 
 * {
   font-family:
@@ -14,7 +14,7 @@ window#waybar {
 }
 
 #workspaces {
-  background-color: @neutral-900;
+  background-color: @neutral-900-80;
   padding: 8px;
   border-radius: 8px;
 }
@@ -23,6 +23,7 @@ window#waybar {
   font-size: 12px;
   min-width: 48px;
   min-height: 24px;
+  padding: 0;
   border: none;
   border-radius: 4px;
   background-color: @neutral-700;
